--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.kbstar</groupId>
-    <artifactId>web09</artifactId>
+    <artifactId>ws0427</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>web09</name>
-    <description>web09</description>
+    <name>ws0427</name>
+    <description>ws0427</description>
     <properties>
         <java.version>11</java.version>
     </properties>
